Fix long link making page too wide

--- a/css/home.css
+++ b/css/home.css
@@ -6,6 +6,7 @@
 
 #content {
   text-align: center;
+  word-break: break-word;
 }
 
 .fancy-title.emoji-on-the-left {
